tests/baselines/reference/generatorTypeCheck62.errors.txt
generatorTypeCheck62.ts(24,62): error TS2345: Argument of type '(state: State) => Generator<never, State, any>' is not assignable to parameter of type '(a: State) => IterableIterator<State | undefined, void>'.
  Call signature return types 'Generator<never, State, any>' and 'IterableIterator<State | undefined, void>' are incompatible.
    The types returned by 'next(...)' are incompatible between these types.
      Type 'IteratorResult<never, State>' is not assignable to type 'IteratorResult<State | undefined, void>'.
        Type 'IteratorReturnResult<State>' is not assignable to type 'IteratorResult<State | undefined, void>'.
          Type 'IteratorReturnResult<State>' is not assignable to type 'IteratorReturnResult<void>'.
            Type 'State' is not assignable to type 'void'.
generatorTypeCheck62.ts(32,62): error TS2345: Argument of type '(state: State) => Generator<undefined, State, any>' is not assignable to parameter of type '(a: State) => IterableIterator<State | undefined, void>'.
  Call signature return types 'Generator<undefined, State, any>' and 'IterableIterator<State | undefined, void>' are incompatible.
    The types returned by 'next(...)' are incompatible between these types.
      Type 'IteratorResult<undefined, State>' is not assignable to type 'IteratorResult<State | undefined, void>'.
        Type 'IteratorReturnResult<State>' is not assignable to type 'IteratorResult<State | undefined, void>'.
          Type 'IteratorReturnResult<State>' is not assignable to type 'IteratorReturnResult<void>'.
            Type 'State' is not assignable to type 'void'.


==== generatorTypeCheck62.ts (2 errors) ====
    export interface StrategicState {
        lastStrategyApplied?: string;
    }
    
    export function strategy<T extends StrategicState>(stratName: string, gen: (a: T) => IterableIterator<T | undefined, void>): (a: T) => IterableIterator<T | undefined, void> {
        return function*(state) {
            for (const next of gen(state)) {
                if (next) {
                    next.lastStrategyApplied = stratName;
                }
                yield next;
            }
        }
    }
    
    export interface Strategy<T> {
        (a: T): IterableIterator<T | undefined, void>;
    }
    
    export interface State extends StrategicState {
        foo: number;
    }
    
    export const Nothing1: Strategy<State> = strategy("Nothing", function*(state: State) {
                                                                 ~~~~~~~~
!!! error TS2345: Argument of type '(state: State) => Generator<never, State, any>' is not assignable to parameter of type '(a: State) => IterableIterator<State | undefined, void>'.
!!! error TS2345:   Call signature return types 'Generator<never, State, any>' and 'IterableIterator<State | undefined, void>' are incompatible.
!!! error TS2345:     The types returned by 'next(...)' are incompatible between these types.
!!! error TS2345:       Type 'IteratorResult<never, State>' is not assignable to type 'IteratorResult<State | undefined, void>'.
!!! error TS2345:         Type 'IteratorReturnResult<State>' is not assignable to type 'IteratorResult<State | undefined, void>'.
!!! error TS2345:           Type 'IteratorReturnResult<State>' is not assignable to type 'IteratorReturnResult<void>'.
!!! error TS2345:             Type 'State' is not assignable to type 'void'.
        return state; // `return`/`TReturn` isn't supported by `strategy`, so this should error.
    });
    
    export const Nothing2: Strategy<State> = strategy("Nothing", function*(state: State) {
        yield state;
    });
    
    export const Nothing3: Strategy<State> = strategy("Nothing", function* (state: State) {
                                                                 ~~~~~~~~
!!! error TS2345: Argument of type '(state: State) => Generator<undefined, State, any>' is not assignable to parameter of type '(a: State) => IterableIterator<State | undefined, void>'.
!!! error TS2345:   Call signature return types 'Generator<undefined, State, any>' and 'IterableIterator<State | undefined, void>' are incompatible.
!!! error TS2345:     The types returned by 'next(...)' are incompatible between these types.
!!! error TS2345:       Type 'IteratorResult<undefined, State>' is not assignable to type 'IteratorResult<State | undefined, void>'.
!!! error TS2345:         Type 'IteratorReturnResult<State>' is not assignable to type 'IteratorResult<State | undefined, void>'.
!!! error TS2345:           Type 'IteratorReturnResult<State>' is not assignable to type 'IteratorReturnResult<void>'.
!!! error TS2345:             Type 'State' is not assignable to type 'void'.
        yield ;
        return state; // `return`/`TReturn` isn't supported by `strategy`, so this should error.
    });
     